--- a/Css/Style.css
+++ b/Css/Style.css
@@ -86,7 +86,7 @@ padding-left: 550px;
     width: 100%;
     position: relative;
     align-items: center;
-    background-image: url("Images/Hero_Desktop_TraeYoung.png");
+    background-image: url("https://www.sprite.com/content/dam/nagbrands/us/sprite/en/home/Hero_Desktop_TraeYoung.png");
     margin-top: 90px;
     background-repeat: no-repeat;
     background-size: cover;
